--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,8 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.16",
+    "postcss-cli": "^11.0.1",
+    "tailwindcss": "^3.4.18",
     "vite": "^7.1.7"
   }
 }
