--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=achados-e-doados
+
+## Development / in-memory DB configuration (H2)
+# This allows the app to start locally without a Postgres instance.
+## Persist H2 to file in development so data survives restarts
+# Use file-based H2 (keeps data under backend/data/)
+spring.datasource.url=jdbc:h2:file:./data/testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# JPA / Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Enable H2 console for local debugging
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
