Fase aprimoramento funções

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -17,3 +17,7 @@ spring.jpa.show-sql=true
 # Enable H2 console for local debugging
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+# Enable debug logging for web layer to diagnose deserialization / message conversion issues
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web.servlet=DEBUG
