--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -21,3 +21,6 @@ spring.h2.console.path=/h2-console
 # Enable debug logging for web layer to diagnose deserialization / message conversion issues
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.web.servlet=DEBUG
+
+# Jackson configuration to handle Hibernate proxies
+spring.jackson.serialization.fail-on-empty-beans=false
