--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=achados-e-doados
 
-## Development / in-memory DB configuration (H2)
-# This allows the app to start locally without a Postgres instance.
-## Persist H2 to file in development so data survives restarts
-# Use file-based H2 (keeps data under backend/data/)
+# Active profile: dev (H2) or prod (PostgreSQL)
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
+
+# Development / in-memory DB configuration (H2)
 spring.datasource.url=jdbc:h2:file:./data/testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
@@ -18,9 +18,9 @@ spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-# Enable debug logging for web layer to diagnose deserialization / message conversion issues
+# Debug logging for development
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.web.servlet=DEBUG
 
-# Jackson configuration to handle Hibernate proxies
+# Jackson configuration
 spring.jackson.serialization.fail-on-empty-beans=false
